# ktelephone

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora43  Dockerfile.ubuntu20  LICENSE  README  README.md  docker-builder.sh  docker-compose.build-debian.yml  docker-compose.telephony-platform-tun.yml  docker-compose.telephony-platform.yml  docker-compose.yml  ktelephone.kdev4  resources.qrc  run.sh
.kdev4/: ktelephone.kdev4
qss/: style.qss
src/: call.cpp  call.h  kdialog.ui  ktelephone.cpp  ktelephone.h  ktelephone.ui  ktelephonecall.cpp  ktelephonecall.h  ktelephoneguide.cpp  ktelephonemanager.cpp  ktelephonemanager.h  ktelephonepreferences.cpp  ktelephonepreferences.h  main.cpp  mycall.cpp  mycall.h  settings.ui  ua.cpp  ua.h  uamanager.cpp  uamanager.h
src/gui/: ktelephone.cpp  ktelephone.h  ktelephone.hpp  ktelephoneabout.cpp  ktelephoneabout.hpp  ktelephonecall.cpp  ktelephonecall.h  ktelephonecall.hpp  ktelephoneguide.cpp  ktelephoneguide.h  ktelephoneguide.hpp  ktelephonemanager.cpp  ktelephonemanager.h  ktelephonemanager.hpp  ktelephonepreferences.cpp  ktelephonepreferences.hpp  ktelephonetransfercall.cpp  ktelephonetransfercall.hpp  ktelephoneutil.cpp  ktelephoneutil.hpp
src/telephony/: mycall.cpp  mycall.h  mycall.hpp  ua.cpp  ua.h  ua.hpp  uamanager.cpp  uamanager.hpp
src/ui/: about.ui  call.ui  kdialog.ui  ktelephone.ui  settings.ui  startguide.ui  transfercall.ui
tests/: CMakeLists.txt
tests/gui/: test_transfer_call_dialog.cpp  test_util.cpp
